@@ -27,15 +27,15 @@ class LengowConnector
     /**
      * @var string url of the API Lengow
      */
-    // const LENGOW_API_URL = 'http://api.lengow.io:80';
-    // const LENGOW_API_URL = 'http://api.lengow.net:80';
-    const LENGOW_API_URL = 'http://api.lengow.rec:80';
+    // const LENGOW_API_URL = 'https://api.lengow.io';
+    // const LENGOW_API_URL = 'https://api.lengow.net';
+    const LENGOW_API_URL = 'http://api.lengow.rec';
     // const LENGOW_API_URL = 'http://10.100.1.82:8081';
 
     /**
      * @var string url of the SANDBOX Lengow
      */
-    const LENGOW_API_SANDBOX_URL = 'http://api.lengow.net:80';
+    const LENGOW_API_SANDBOX_URL = 'https://api.lengow.net';
 
     /**
      * @var array fixture for test
@@ -341,7 +341,9 @@ class LengowConnector
         $url = self::LENGOW_API_URL . $url;
         $opts[CURLOPT_CUSTOMREQUEST] = Tools::strtoupper($type);
         $url = parse_url($url);
-        $opts[CURLOPT_PORT] = $url['port'];
+        if (isset($url['port'])) {
+            $opts[CURLOPT_PORT] = $url['port'];
+        }
         $opts[CURLOPT_HEADER] = false;
         $opts[CURLOPT_RETURNTRANSFER] = true;
         $opts[CURLOPT_VERBOSE] = false;
